welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:8: error: too many arguments for method brossage: ()Unit
	brossage(c);
                ^